--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,9 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
+@import 'buttons';
+@import 'nav';
+@import 'footer';
 
 
 body {
