--- a/app/views/insertad.html
+++ b/app/views/insertad.html
@@ -56,5 +56,5 @@
         <span ng-show="!isEditing()">Publicera efterfest</span>
         <span ng-show="isEditing()">Spara ändringar</span>
     </button>
-    <button class="btn btn-danger btn-lg" ng-show="isEditing()" ng-click="delete()">Ta bort efterfest</button>
+    <button class="btn btn-danger btn-lg" ng-show="isEditing()" ng-click="delete()">Ta bort</button>
 </div>
