--- a/app/views/viewad.html
+++ b/app/views/viewad.html
@@ -1,16 +1,17 @@
 
 <div class="row">
-  <div class="col-sm-4">
-    <label>Beskrivning</label>
+  <div class="col-sm-8">
+
+    <div style="margin-bottom: 20px; ">
+      <img style="width: 100%;" ng-show="party.image" ng-src="{{party.image.link}}"/>
+    </div>
+
+    <label>Beskrivning:</label>
     <p>{{party.description}}</p>
+
   </div>
 
   <div class="col-sm-4">
-    <label>Bild</label>
-    <img ng-show="party.image" class="img-thumbnail" ng-src="{{party.image.link}}"/>
-  </div>
-  <div class="col-sm-4">
-    <label>Område</label>
     <ui-gmap-google-map center='map.center' zoom='map.zoom'>
 
       <ui-gmap-marker coords="party.coords" idkey="5">
@@ -28,12 +29,7 @@
 
 
 
-
-
-
-
-
-<h3>Vill du komma? skriv ett meddelande!</h3>
+<h3 ng-show="!sentRequest">Vill du komma? skriv ett meddelande!</h3>
 
 <div ng-show="!user">
   <button ng-click="login()" class="btn btn-primary btn-block">Logga in med Facebook</button>
@@ -41,7 +37,10 @@
 
 <div ng-show="user">
   <div ng-show="sentRequest">
-    <strong>Ditt meddelande:</strong> {{sentRequest.message}}
+    <strong>Ditt meddelande:</strong>
+    <p>
+      {{sentRequest.message}}
+    </p>
     <button ng-click="removeRequest()" class="btn btn-danger btn-xs">Ta bort</button>
   </div>
 
@@ -51,21 +50,6 @@
       <label>Meddelande</label>
       <textarea class="form-control" rows="3" ng-model="request.message"></textarea>
     </div>
-
-    <label>Bild</label>
-
-    <div ng-show="request.image">
-      <img style="width: 100%;" class="img-thumbnail" ng-src="{{request.image.link}}"/>
-      <button style="margin-top: 20px; float: right;" class="btn btn-danger" ng-click="removeImage()">Ta bort bild</button>
-    </div>
-
-    <form ng-show="!request.image" class="form-group" ng-submit="uploadImage($event)">
-      <input class="form-control" id="imageInput" name="image" type="file"/>
-      <button style="margin-top: 10px;" ng-disabled="uploadingImage" class="btn btn-default" type="submit">
-        <span ng-if="!uploadingImage">Ladda upp bild</span>
-        <span ng-if="uploadingImage">Laddar upp...</span>
-      </button>
-    </form>
 
     <button style="margin-top: 20px;" class="btn btn-primary" ng-click="saveRequest()">Skicka meddelande</button>
   </div>
