--- a/app/views/insertad.html
+++ b/app/views/insertad.html
@@ -1,11 +1,4 @@
 
-<div class="row">
-  <div class="col-xs-12">
-    <p>
-      <a class="btn btn-default" href="#/">Tillbaka</a>
-    </p>
-  </div>
-</div>
 
 <form name="form" ng-submit="save()" novalidate>
 
@@ -19,11 +12,11 @@
           </div>
 
           <div class="form-group">
-            <label>Hur hittar man hit? <span class="text-muted">(syns bara vid accepterad förfågan)</span></label>
-            <textarea required name="directions" class="form-control" rows="3" ng-model="ad.directions"></textarea>
+            <label>Hur vill du bli kontaktad?</label>
+            <textarea placeholder="Länk till facebook, kik, telefonnummer etc." required name="contact" class="form-control" rows="3" ng-model="ad.contact"></textarea>
           </div>
 
-          <label>Välj bild</label>
+          <label>Välj bild (valfritt)</label>
           <div ng-show="ad.image">
             <img style="width: 100%;" class="img-thumbnail" ng-src="{{ad.image.link}}"/>
             <button style="margin-top: 20px; float: right;" class="btn btn-danger" ng-click="removeImage()">Ta bort bild</button>
@@ -56,7 +49,7 @@
 
   <div style="margin-top: 20px;">
       <button class="btn btn-primary btn-lg" type="submit" ng-disabled="userForm.$invalid">
-          <span ng-show="!isEditing()">Publicera efterfest</span>
+          <span ng-show="!isEditing()">Spara efterfest</span>
           <span ng-show="isEditing()">Spara ändringar</span>
       </button>
       <button type="button" class="btn btn-danger btn-lg" ng-show="isEditing()" ng-click="delete()">Ta bort</button>
